--- a/src/styles/modules/aside-right.less
+++ b/src/styles/modules/aside-right.less
@@ -15,6 +15,7 @@
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
   flex-direction: column;
+  height: auto;
 
   &-album1 {
     display: flex;
