add some forgotten elements

--- a/src/styles/modules/Common.less
+++ b/src/styles/modules/Common.less
@@ -133,6 +133,11 @@ input[type=range] {
   margin-left: 5px;
 }
 
+.fa-plus-circle {
+  color: red;
+  margin-left: 65%;
+}
+
 @media screen and (min-width:480px) and (max-width:800px) {
   html, body {
     height: auto;
@@ -145,7 +150,11 @@ input[type=range] {
     font-size: 1.2vw;
   }
 
-  .container-1 input #search {
+  .container-1 input#search {
     padding-left: 40px;
+  }
+  
+  .container-1 .icon {
+    margin-top: 0.8vh;
   }
 }
